<resources>
    <string name="app_name">Customers Scheduling</string>

    <string name="title_activity_business_registration">BusinessRegistrationActivity</string>
    <string name="title_activity_business_schedule">BusinessScheduleActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="customersScheduling">Customers Scheduling</string>
    <string name="title">Customers Scheduling</string>
    <string name="registerStore"> Register Store</string>
    <string name="registerEmployee"> Register Employee</string>
    <string name="pendentRequests">Pendent Requests</string>
    <string name="definitions">Definitions</string>
    <string name="favourites">Favourites</string>
    <string name="menu_search">Search</string>
    <string name="filter">Filter</string>
    <string name="services">Services</string>
    <string name="contact">Contact:</string>
    <string name="address">Address:</string>
    <string name="name">Name:</string>
    <string name="description">Name:</string>
    <string name="about">About</string>
    <string name="price">Price</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="delete">Delete</string>
    <string name="goTo">Go</string>
    <string name="chooseEmployee">Choose Employee</string>
    <string name="scheduled">Scheduled</string>
    <string name="location">Chose Location</string>
    <string name="category">Chose Category</string>
    <string name="myStores">My Stores</string>
    <string name="editBusinessInfo">Edit</string>
    <string name="chooseCategory">Chose Category</string>
    <string name="scheduleRegistration">Schedule Registration</string>
    <string name="employeeRegistration">Employee Registration</string>
    <string name="monday">monday</string>
    <string name="tuesday">tuesday</string>
    <string name="wednesday">wednesday</string>
    <string name="thursday">thursday</string>
    <string name="friday">friday</string>
    <string name="saturday">saturday</string>
    <string name="sunday">sunday</string>
    <string name="registerAnotherEmployee">Register Another Employee</string>
    <string name="registerAnotherService">Register Another Service</string>
    <string name="endRegistration">End Registration</string>
    <string name="endServiceRegistration">End Service Registration</string>
    <string name="logout">Logout</string>
    <string name="registerSchedule">Register Schedule</string>
    <string name="registerService">Register Service</string>
    <string name="deleteService">Delete Service</string>
    <string name="multilines">Client\nRequests</string>
    <string name="login">Login</string>
    <string name="street_and_lot_number_ex_street_2">Street Ex: Street </string>
    <string name="insert_zipcode">insert zipcode</string>
    <string name="insert_lot">insert Lot Ex: Lot 2</string>
    <string name="ex_london_england">City and Country Ex: London England</string>
    <string name="insert_contact">insert Contact</string>
    <string name="insert_name">insert Name</string>
    <string name="insert_nif">insert Nif</string>
    <string name="open_existing_image">Open Existing Image</string>
    <string name="take_new_photo">Take New Photo</string>
    <string name="ok">Ok</string>
    <string name="nif">nif</string>
    <string name="cancel">Cancel</string>
    <string name="end_employee_schedule_registration">End Employee Schedule Registration</string>
    <string name="rate">Rate</string>
    <string name="unregister">Unregister</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="gender_0_for_female_1_for_male">Gender: 0 for Female 1 for Male</string>
    <string name="_0_min_5_max">0(Min)- 5(Max)</string>
    <string name="insert_Rate">Insert Rate</string>
    <string name="end_hour_ex_10_00">end Hour (Ex: 10.00)</string>
    <string name="lunch_time_end_ex_10_00">Lunch Time End (Ex: 10.00)</string>
    <string name="lunch_time_start_ex_10_00">Lunch Time Start (Ex: 10.00)</string>
    <string name="start_hour_ex_10_00">Start Hour (Ex: 10.00)</string>
    <string name="choose_gender">Choose gender</string>
    <string-array name="categories_array">
        <item>Restaurants</item>
        <item>Barber</item>
        <item>Gym</item>
        <item>Spa</item>
        <item>Health</item>
        <item>Dentists</item>
    </string-array>

    <string-array name="locations_array">
        <item>Lisboa</item>
        <item>Porto</item>
        <item>Lagos</item>
        <item>Albufeira</item>
        <item>Portalegre</item>
        <item>Elvas</item>
        <item>Beja</item>
        <item>Cascais</item>
        <item>Bragança</item>
        <item>Ponte de Lima</item>
        <item>Braga</item>
        <item>Viseu</item>
    </string-array>

    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>

    </string-array>

    <integer-array name="rank">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </integer-array>
</resources>
