<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/registerStore"
        android:visible="false"
        android:title="@string/registerStore">
    </item>
    <item
        android:id="@+id/myStores"
        android:visible="false"
        android:title="@string/myStores">
    </item>
    <item
        android:id="@+id/scheduled"
        android:visible="false"
        android:title="@string/scheduled">
    </item>
    <item
        android:id="@+id/definitions"
        android:visible="false"
        android:title="@string/definitions">
    </item>
    <item
        android:id="@+id/favorites"
        android:visible="false"
        android:title="@string/favourites">
    </item>

    <item
        android:id="@+id/menu_search"
        android:title="Pesquisar"
        android:icon="@drawable/ic_action_action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always"
        ></item>
    <item
        android:id="@+id/About"
        android:title="@string/about">
    </item>
    <item
        android:id="@+id/login"
        android:title="@string/login">
    </item>
    <item
        android:id="@+id/logout"
        android:visible="false"
        android:title="@string/logout">
    </item>

</menu>