<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:background="@color/cardview_light_background"
    tools:context=".Fragments.BusinessRegistrationFragments.RegisterEmployeeScheduleFragment">

       <include
        android:id="@+id/app_bar"
        layout="@layout/toolbarwithbackarrow"></include>

    <RelativeLayout
        android:id="@+id/editTextLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_bar">

        <EditText
            android:id="@+id/employeeBegginHour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:cursorVisible="false"
            android:hint="@string/start_hour_ex_10_00" />

        <EditText
            android:id="@+id/employeeBegginLunch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/employeeBegginHour"
            android:cursorVisible="false"
            android:hint="@string/lunch_time_start_ex_10_00" />

        <EditText
            android:id="@+id/employeeEndLunch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/employeeBegginLunch"
            android:cursorVisible="false"
            android:hint="@string/lunch_time_end_ex_10_00" />

        <EditText
            android:id="@+id/employeeEndHour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/employeeEndLunch"
            android:cursorVisible="false"
            android:hint="@string/end_hour_ex_10_00" />



        <CheckBox
            android:id="@+id/monday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/monday"
            android:layout_below="@+id/employeeEndHour"/>

        <CheckBox
            android:id="@+id/tuesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/employeeEndHour"
            android:layout_marginStart="90dp"
            android:text="@string/tuesday" />

        <CheckBox
            android:id="@+id/wednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/employeeEndHour"
            android:layout_marginEnd="96dp"
            android:text="@string/wednesday" />

        <CheckBox
            android:id="@+id/thursday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/employeeEndHour"
            android:text="@string/thursday" />

        <CheckBox
            android:id="@+id/friday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/monday"
            android:layout_marginStart="44dp"
            android:text="@string/friday" />

        <CheckBox
            android:id="@+id/saturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/monday"
            android:layout_centerHorizontal="true"
            android:text="@string/saturday" />

        <CheckBox
            android:id="@+id/sunday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/monday"
            android:layout_marginEnd="44dp"
            android:text="@string/sunday" />


    </RelativeLayout>
    <Button
        android:id="@+id/employeeRegisterSchedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="148dp"
        android:text="@string/registerSchedule"
        android:textSize="20dp" />

    <Button
        android:id="@+id/endEmployeeRegisterSchedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="23dp"
        android:text="@string/end_employee_schedule_registration"
        android:textSize="20dp" />


</RelativeLayout>