<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/nifDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/insert_nif"
        android:layout_marginTop="5dp"
        android:textSize="25dp"
        android:textStyle="italic"/>

    <EditText
        android:id="@+id/nif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="number"
        android:hint="@string/nif"
        android:ems="10"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ok"
        android:background="@color/colorAccent"
        android:id="@+id/ok"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cancel"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"
        android:id="@+id/cancel"
        />

</LinearLayout>