<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:clickable="true"
    android:layout_height="match_parent"
    tools:context=".Fragments.MainActivityFlowFragments.ClientDataFragment">

    <include
        android:id="@+id/app_bar"
        layout="@layout/toolbarwithbackarrow" />
    <RelativeLayout
        android:id="@+id/editTextLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_bar">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:cursorVisible="false"
            android:hint="Name" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/name"
            android:cursorVisible="false"
            android:hint="@string/email" />

        <EditText
            android:id="@+id/contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/email"
            android:cursorVisible="false"
            android:hint="@string/phone_number" />

        <EditText
            android:id="@+id/gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/contact"
            android:cursorVisible="false"
            android:hint="@string/gender_0_for_female_1_for_male" />

        <Button
            android:id="@+id/registerClient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="21dp"
            android:text="@string/registerEmployee"
            android:textSize="20sp" />

    </RelativeLayout>

</RelativeLayout>