<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.ps.isel.customersscheduling.Activities.RegisterStoreActivity">

    <include
        android:id="@+id/filter_toolbar"
        layout="@layout/toolbarwithbackarrow"></include>

    <RelativeLayout
        android:id="@+id/editTextLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/filter_toolbar">

        <EditText
            android:id="@+id/employeeBegginHour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:hint="Start Hour (Ex: 10:00)" />

        <EditText
            android:id="@+id/employeeBegginLunch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/employeeBegginHour"
            android:cursorVisible="false"
            android:hint="Lunch Time Start (Ex: 10:00)" />

        <EditText
            android:id="@+id/employeeEndLunch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/employeeBegginLunch"
            android:cursorVisible="false"
            android:hint="Lunch Time End (Ex: 10:00)" />

        <EditText
            android:id="@+id/employeeEndHour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/employeeEndLunch"
            android:cursorVisible="false"
            android:hint="end Hour (Ex: 10:00)" />



    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editTextLayout">

        <CheckBox
            android:id="@+id/monday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monday" />

        <CheckBox
            android:id="@+id/tuesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/monday"
            android:layout_toRightOf="@+id/monday"
            android:text="@string/tuesday" />

        <CheckBox
            android:id="@+id/wednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/tuesday"
            android:layout_toRightOf="@+id/tuesday"
            android:text="@string/wednesday" />

        <CheckBox
            android:id="@+id/thursday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/wednesday"
            android:layout_toRightOf="@+id/wednesday"
            android:text="@string/sunday" />

        <CheckBox
            android:id="@+id/friday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/thursday"
            android:layout_toRightOf="@+id/thursday"
            android:text="@string/friday" />

        <CheckBox
            android:id="@+id/saturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/friday"
            android:layout_toRightOf="@+id/friday"
            android:text="@string/saturday" />

        <CheckBox
            android:id="@+id/sunday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/friday"
            android:layout_toRightOf="@+id/friday"
            android:text="@string/sunday" />

        <Button
            android:id="@+id/employeeRegisterSchedule"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="21dp"
            android:text="Register Schedule"
            android:textSize="20dp" />

    </RelativeLayout>


</RelativeLayout>
